# MLBAlertsV1

./: .deployment_ready  .replit  AI_POWER_HIGH_AUDIT.md  AI_POWER_HIGH_FIXES_SUMMARY.md  AI_POWER_HITTER_ANALYSIS_AUDIT.md  ALERT_DEDUPLICATION_SPECS.md  ALERT_FIXES_SUMMARY.md  ALERT_FORMULAS_REFERENCE.md  ALERT_SUCCESS_RATE_SYSTEM_ANALYSIS.md  ALERT_SYSTEM_AUDIT.md  CHANGELOG.md  CLUTCH_HR_RISP_7TH_AUDIT.md  CLUTCH_HR_RISP_7TH_FIXES_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  DEDUP_INTEGRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY_TEST.py  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_DEPLOYMENT_READINESS_CHECK.md  FINAL_SYSTEM_VALIDATION.md  FORMULA_ACCURACY_CHECK.md  GAME_START_ALERT_FIX.md  HIGH_HRFI_WIND_OUT_ANALYSIS.md  HOT_HITTER_GAME_HR_AUDIT.md  HOT_HITTER_GAME_HR_FIXES_SUMMARY.md  MATH_FORMULAS_VALIDATION_REPORT.md  MLB_ALERT_CHEAT_SHEET.md  MLB_MONITOR_SPECIFICATION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PITCHER_SOFTENING_AUDIT.md  PITCHER_SOFTENING_FIXES_SUMMARY.md  POWER_HITTER_20HR_AUDIT.md  POWER_HITTER_20HR_FIXES_SUMMARY.md  PREDICT_SCORING_PROBABILITY_AUDIT.md  PREDICT_SCORING_PROBABILITY_FIXES_SUMMARY.md  QUICK_ALERT_DECODER.md  RUNNERS_23_ONE_OUT_AUDIT.md  SETTINGS_SYNC_FINAL_FIX.md  SETTINGS_SYNC_FIX.md  SYSTEM_IMPROVEMENTS.md  (+35 more)
attached_assets/: Pasted-MLB-Live-Game-Monitor-Changelog-1-4-0-2025-08-10-ROI-Alerts-Pack-Added-AI-Power-Hitter-Sc-1754857685994_1754857685997.txt  Pasted-Priority-fixes-surgical-Scope-state-to-the-right-context-per-alert-type-Right-now-game-states-7-1754844806922_1754844806927.txt  dedup (1)_1755275130712.py  (+4 more)
(+9 files in other folders)
