[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mlb-statsapi>=1.9.0",
    "openai>=1.99.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
]
